[package]

name = "rust-marpa-macros-test"
version = "0.0.1"
authors = [ "pioczarn@gmail.com" ]

[[bin]]
name = "myexample"
path = "ambiguous_grammar_slif.rs"

[dependencies.rust-marpa-macros]
path = ".."

[dependencies.rust-marpa]
path = "../.."

[dependencies.regex]

[dependencies.regex_macros]

[dependencies.time]
