[package]

name = "rust-marpa-macros-test"
version = "0.0.1"
authors = [ "pioczarn@gmail.com" ]

[[bin]]
name = "myexample"
path = "json-ast.rs"

[dependencies.rust-marpa-macros]
path = ".."

[dependencies.regex-scanner]
path = "../../regex-scanner"

[dependencies.rust-marpa]
path = "../.."

[dependencies.regex]
[dependencies.regex_macros]

[dependencies.time]
