[package]

name = "rust-marpa-macros-stage0"
version = "0.0.1"
authors = [ "pioczarn@gmail.com" ]

[lib]
name = "marpa_macros"
crate_type = ["dylib"]
plugin = true

[dependencies.rust-marpa]
path = "../.."

[dependencies.rust-marpa-macros-stage-minus-one]
path = "../stage-minus-one"

[dependencies.enum-adaptor]
path = "../../enum-adaptor"
