[package]

name = "rust-marpa-macros-stage1"
version = "0.0.1"
authors = [ "pioczarn@gmail.com" ]

[lib]
name = "marpa_macros"
crate_type = ["dylib"]
plugin = true
path = "../src/marpa_macros.rs"

[dependencies.rust-marpa]
path = "../.."

[dependencies.rust-marpa-macros-stage0]
path = "../stage0"

[dependencies.enum-adaptor]
path = "../../enum-adaptor"
